syntax = "proto3";

package v1;

option java_package = "v1";
option java_multiple_files = true;
option java_outer_classname = "BookGrpc";

service BookService {
  rpc searchBooksByExpression(BookSearchRequest) returns (BookSearchResponse);
  rpc getBookByGoogleBooksId(GetBookByGoogleBooksIdRequest) returns (GetBookByGoogleBooksIdResponse);
}

message BookSearchRequest {
  enum BookSearchOrder {
    RELEVANCE = 0;
    NEWEST = 1;
  }

  string expression = 1;
  BookSearchOrder searchOrder = 2;
  int32 startIndex = 3;
  int32 maxResults = 4;
}

message BookSearchResponse {
  string expression = 1;
  repeated BookSearchResult results = 2;
}

message BookSearchResult {
  string id = 1;
  string title = 2;
  string subtitle = 3;
  repeated string authors = 4;
  string publishedDate = 5;
  repeated string categories = 6;
  map<string, string> imageLinks = 7;
  string description = 8;
  int32 pageCount = 9;
  double averageRating = 10;
  int32 ratingsCount = 11;
  string language = 12;
}

message GetBookByGoogleBooksIdRequest {
  string GoogleBooksId = 1;
}

message GetBookByGoogleBooksIdResponse {
  BookData Book = 1;
}

message BookData {
  string id = 1;
  string googleBookId = 2;
  string title = 3;
  string subtitle = 4;
  repeated string authors = 5;
  string publishedDate = 6;
  repeated string categories = 7;
  map<string, string> imageLinks = 8;
  string description = 9;
  int32 pageCount = 10;
  double averageRating = 11;
  int32 ratingsCount = 12;
  string language = 13;
}

